# test_task

./: CMakeLists.txt  README.md  input.txt
src/: CMakeLists.txt  def.hpp  file.cpp  file.hpp  log.hpp  main.cpp  object_chooser.hpp  object_table.cpp  object_table.hpp  object_viewer.cpp  object_viewer.hpp  parse.cpp  parse.hpp  sort.cpp  sort.hpp
